--- a/src/main/resources/templates/annos.html
+++ b/src/main/resources/templates/annos.html
@@ -7,12 +7,8 @@
     </head>
 
     <body>
-        <h1>Hei opiskelijat!</h1>
+        <h1>Smoothie-annos nimeltä <span th:text="${annos.nimi}">annos</span>!</h1>
 
-        <ol>
-            <li th:each="opiskelija: ${opiskelijat}">
-                <span th:text="${opiskelija.nimi}">opiskelijan nimi</span> <a th:href="${'/opiskelijat/' + opiskelija.id}">linkki</a>
-            </li>
-        </ol>
+        <p>Olet saapunut annoksen <span th:text="${annos.nimi}">annos</span> omalle sivulle.</p>
     </body>
 </html>
