--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,10 @@
     </head>
 
     <body>
-        <h1>Heippa vaan!</h1>
+        <h1>Heissuli vei, Smoothieita jei!</h1>
 
         <p>Ja .. <span th:text="${viesti}">jotain?</span></p>
 
-        <p><a href="/opiskelijat">Tästä opiskelijalistaukseen.</a></p>
+        <p><a href="/annokset">Tästä annoslistaukseen.</a></p>
     </body>
 </html>
