--- a/src/main/resources/templates/annokset.html
+++ b/src/main/resources/templates/annokset.html
@@ -7,13 +7,48 @@
     </head>
 
     <body>
-        <h1>Smoothie-annokset!</h1>
+        <h2>Smoothie-annokset!</h2>
 
         <ol>
             <li th:each="annos: ${annokset}">
-                <span th:text="${annos.nimi}">annoksen nimi</span> <a th:href="${'/annokset/' + annos.id}">linkki</a>
+                <span th:text="${annos.nimi}"></span> <a th:href="${'/annokset/' + annos.id}">siirry</a>
+                (<a href="annos.id/poista">poista</a>)
             </li>
         </ol>
+        
+        <h4>Lisää uusi</h4>
+
+        <form method="POST" action="">
+            Smoothien nimi:<br/>
+            <input type="text" name="aine"/><br/>
+            <input type="submit" value="Lisää"/>
+        </form>
+        
+        <form method="POST" action="">
+            Smoothien nimi:<br/>
+            <select name="smoothie">
+                <option name="3">valitse </option>
+                <option name="2">Banaanismoothie</option>
+                <option name="1">Mansikkasmoothie</option>
+            </select>
+            <br/>
+            Lisättävä raaka-aine<br/>
+            <select name="raakaAine">
+                <option name="1">Appelsiini</option>
+                <option name="2">Banaani</option>
+                <option name="...">...</option>
+            </select>
+            <br/>
+            Järjestys<br/>
+            <input type="text"/><br/>
+            Määrä<br/>
+            <input type="text"/><br/>
+            Ohje<br/>
+            <input type="text"/><br/>
+            <input type="submit" value="Lisää"/>
+        </form>
+        
+        <p><a href="../">Takaisin listaukseen</a></p>
         
     </body>
 </html>
