--- a/src/main/resources/templates/annos.html
+++ b/src/main/resources/templates/annos.html
@@ -2,13 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <title>Otsikko</title>
+        <title>Smoothie</title>
         <meta charset="utf-8" />
     </head>
 
     <body>
-        <h1>Smoothie-annos nimeltä <span th:text="${annos.nimi}">annos</span>!</h1>
+        <h2>Smoothie-annos nimeltä <span th:text="${annos.nimi}">annos</span>!</h2>
 
-        <p>Olet saapunut annoksen <span th:text="${annos.nimi}">annos</span> omalle sivulle.</p>
+        <p>Olet saapunut annoksen <span th:text="${annos.nimi}">annos</span> omalle sivulle. 
+        Sivulla luettelo smoothien raaka-aineista sekä ohje.</p>
+        
+        <br/>
+         
+        <h4>Raaka-aineet:</h4><br/>
+        
+        <ol>
+            <li th:each="ainesosa: ${annos.raakaAineitaAnnoksessa}">
+                <span th:text="${ainesosa.nimi}"></span>
+            </li>
+        </ol>
+        
+        <p><a href="/annokset">Takaisin listaukseen/muokkaa smoothieta</a></p>
+
+        
+        
+            
     </body>
 </html>
