--- a/src/main/resources/templates/ainekset.html
+++ b/src/main/resources/templates/ainekset.html
@@ -11,9 +11,28 @@
         <ol>
             <li th:each="aines: ${ainekset}">
                 <span th:text="${aines.nimi}"></span>
-                <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'> 
+                                           
+                <button onclick="confirmDelete()">Poista</button>
+
+                <script>
+                function confrimDelete() {
+                var txt;
+                var r = confirm("Oletko varma, että haluat poistaa raaka-aineen?");
+                if (r == true) {
+                    <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'>                     
+                    </form>
+                } else {
+                    txt = "Et poistanut raaka-ainetta.";
+                }
+                
+                </script>
+                
+                
+
+                <!--tässä alla on se toimiva tapa poistoon, mutta tässä ei mahdollisuutta varmistukseen, poistaa vaan suoraan:
+                    <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'> 
                     <input type="submit" value="Poista"/>
-                </form>
+                </form> -->                
             </li>
         </ol>
         
