--- a/src/main/resources/templates/ainekset.html
+++ b/src/main/resources/templates/ainekset.html
@@ -12,27 +12,29 @@
             <li th:each="aines: ${ainekset}">
                 <span th:text="${aines.nimi}"></span>
                                            
-                <button onclick="confirmDelete()">Poista</button>
+<!--                <button onclick="confirmDelete()">Poista</button>-->
 
-                <script>
+<!--                <script>
                 function confrimDelete() {
-                var txt;
-                var r = confirm("Oletko varma, että haluat poistaa raaka-aineen?");
-                if (r == true) {
-                    <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'>                     
-                    </form>
-                } else {
-                    txt = "Et poistanut raaka-ainetta.";
+                    var txt;
+                    var r = confirm("Oletko varma, että haluat poistaa raaka-aineen?");
+                    if (r == true) {
+                        txt = "näkyyyy";
+                        <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'>                     
+                        </form>
+                    } else {
+                        txt = "Et poistanut raaka-ainetta.";
+                    }
                 }
                 
-                </script>
+                </script>-->
                 
                 
 
-                <!--tässä alla on se toimiva tapa poistoon, mutta tässä ei mahdollisuutta varmistukseen, poistaa vaan suoraan:
+                <!--tässä alla on se toimiva tapa poistoon, mutta tässä ei mahdollisuutta varmistukseen, poistaa vaan suoraan:-->
                     <form th:action="${'ainekset/' + aines.id + '/poista'}" method='POST'> 
                     <input type="submit" value="Poista"/>
-                </form> -->                
+                </form>                 
             </li>
         </ol>
         
