pieni linkkimuokkaus annos.html -sivulle

--- a/src/main/resources/templates/annos.html
+++ b/src/main/resources/templates/annos.html
@@ -24,7 +24,10 @@
 
         <ul>
             <li>
-                <a href="/annokset">Takaisin listaukseen/muokkaa smoothieta</a>
+                <a href="/annokset">Muokkaa smoothieta</a>
+            </li>
+            <li>
+                <a href="/">Takaisin listaukseen</a>
             </li>
         </ul>
         
