--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -22,17 +22,22 @@
         </ol>
         
         <h4>Hae raaka-aineen perusteella:</h4>
-        <form method="GET" action="'tilasto/' + haettava.nimi + '/tulokset'">
+        <form method="GET" action="/tilasto">
             <select name="haettava" required="">
                 <option th:each="aines: ${ainekset}" th:text="${aines.nimi}"></option>
             </select>
-            <input type="submit" value="Hae"/>        
+            <input type="submit" value="Hae"/>  
+            <ol>
+            <li th:each="smoothiet: ${smoothiet}">
+                
+            </li>
+        </ol>
         </form>
-        <ol>
+        <!--<ol>
             <li th:each="smoothiet: ${smoothiet}">
                 <span th:text="${smoothiet.id}"></span>
             </li>
-        </ol>
+        </ol>-->
         
         
         
