--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Smoothiearkisto</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="ulkoasu.css" />
     </head>
 
     <body>
