if-lause tilasto postiin lisätty

--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -32,17 +32,12 @@
             </li>
         </ol>
         </form>
-        <!--<ol>
-            <li th:each="smoothiet: ${smoothiet}">
+        <ol>
+<!--            <li th:each="smoothiet: ${smoothiet}">
                 <span th:text="${smoothiet.id}"></span>
-            </li>
-        </ol>-->
-        
-        
-        
-        
-        
-
+            </li>-->
+        </ol>
+       
         <ul>
             <li>
                 <a href="../">Smoothielistaukseen</a>
