--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -20,7 +20,7 @@
             </li>
         </ol>
         
-        <h4>Hae raaka-aineen perusteella:</h4>
+        <!--<h4>Hae raaka-aineen perusteella:</h4>
         <form method="GET" action="/tilasto">
             <select name="haettava" required="">
                 <option th:each="aines: ${ainekset}" th:text="${aines.nimi}"></option>
@@ -33,10 +33,10 @@
         </ol>
         </form>
         <ol>
-<!--            <li th:each="smoothiet: ${smoothiet}">
+            <li th:each="smoothiet: ${smoothiet}">
                 <span th:text="${smoothiet.id}"></span>
-            </li>-->
-        </ol>
+            </li>
+        </ol>-->
        
         <ul>
             <li>
