--- a/src/main/resources/templates/annokset.html
+++ b/src/main/resources/templates/annokset.html
@@ -4,6 +4,7 @@
     <head>
         <title>Lisää smoothie</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="ulkoasu.css" />
     </head>
     <body>
         <h3>Smoothiet!</h3>
