--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -4,7 +4,7 @@
     <head>
         <title>Ainesosa</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="ulkoasu.css" />
+        <!--<link rel="stylesheet" type="text/css" href="ulkoasu.css" />-->
     </head>
 
     <body>
@@ -16,7 +16,7 @@
         
         <br/>
          
-        <h4>Smoothiet:</h4><br/>
+<!--        <h4>Smoothiet:</h4><br/>
         
         <ol>
             <li th:each="annos: ${annokset}">
@@ -32,7 +32,7 @@
                 <a href="/">Takaisin listaukseen</a>
             </li>
         </ul>
-        
+        -->
             
     </body>
 </html>
