poistin jotain turhaa ja yritin ratkoa raaka-aineen nimen näyttämis

--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -16,7 +16,7 @@
         
         <br/>
          
-<!--        <h4>Smoothiet:</h4><br/>
+        <h4>Smoothiet:</h4><br/>
         
         <ol>
             <li th:each="annos: ${annokset}">
@@ -32,7 +32,7 @@
                 <a href="/">Takaisin listaukseen</a>
             </li>
         </ul>
-        -->
+        
             
     </body>
 </html>
