--- a/src/main/resources/public/ulkoasu.css
+++ b/src/main/resources/public/ulkoasu.css
@@ -24,7 +24,7 @@ h4 {
     font-family: sans-serif;
 }
 
-p, li {
+p, li, h6 {
     color: #000000;
     margin-left: 20px;
     font-family: sans-serif;
