--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -4,7 +4,33 @@
     <head>
         <title>Ainesosa</title>
         <meta charset="utf-8" />
-        <!--<link rel="stylesheet" type="text/css" href="ulkoasu.css" />-->
+        <style>
+            body {
+                background-color: #FCDCDC;
+            }
+
+            h3 {
+                color: #000000;
+                margin-left: 20px;
+                font-family: sans-serif;
+            }
+
+            h4 {
+                color: #000000;
+                margin-left: 20px;
+                font-family: sans-serif;
+            }
+
+            p, li {
+                color: #000000;
+                margin-left: 20px;
+                font-family: sans-serif;
+            }
+
+            ul {
+                list-style-type: circle;
+            }
+        </style>
     </head>
 
     <body>
