--- a/src/main/resources/templates/ainekset.html
+++ b/src/main/resources/templates/ainekset.html
@@ -43,9 +43,10 @@
         <h4>Lisää uusi raaka-aine</h4>
 
         <form method="POST" action="">
-            Raaka-aineen nimi:<br/>
+            <p>Raaka-aineen nimi:<br/>
             <input type="text" name="aine" required=""/><br/>
             <input type="submit" value="Lisää"/>
+            </p>
         </form>
 
         <ul>
