--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -8,43 +8,53 @@
     </head>
 
     <body>
-        <h3>Tilastoja</h3>
-        
-        <p>Tällä sivulla voit tarkastella smoothieita raaka-aineiden mukaan.</p>
-        
-        <br/>
-        
-        <h4>Kaikki raaka-aineet:</h4>
-        <ol>
-            <li th:each="aines: ${ainekset}">
-                <a th:href="${'/tilasto/' + aines.id}"><span th:text="${aines.nimi}"></span></a>
-            </li>
-        </ol>
-        
-        <!--<h4>Hae raaka-aineen perusteella:</h4>
-        <form method="GET" action="/tilasto">
-            <select name="haettava" required="">
-                <option th:each="aines: ${ainekset}" th:text="${aines.nimi}"></option>
-            </select>
-            <input type="submit" value="Hae"/>  
-            <ol>
-            <li th:each="smoothiet: ${smoothiet}">
-                
-            </li>
-        </ol>
-        </form>
-        <ol>
-            <li th:each="smoothiet: ${smoothiet}">
-                <span th:text="${smoothiet.id}"></span>
-            </li>
-        </ol>-->
-       
-        <ul>
-            <li>
-                <a href="../">Smoothielistaukseen</a>
-            </li>
-        </ul>
-        
+        <div class="container">
+            
+            <header>
+                <h1>Tilastoja</h1>
+            </header>
 
+            <nav>
+                <ul>
+                    <li><a href="../">Etusivu</a></li>
+                    <li><a href="/annokset">Luo uusi smoothie</a></li>
+                    <li><a href="/ainekset">Lisää ja muokkaa raaka-aineita</a></li>
+                </ul>
+            </nav>
+            
+            <article>
+                <p>Tällä sivulla voit tarkastella smoothieita raaka-aineiden mukaan.</p>
+
+                <br/>
+
+                <h4>Kaikki raaka-aineet:</h4>
+                <ol>
+                    <li th:each="aines: ${ainekset}">
+                        <a th:href="${'/tilasto/' + aines.id}"><span th:text="${aines.nimi}"></span></a>
+                    </li>
+                </ol>
+
+                <!--<h4>Hae raaka-aineen perusteella:</h4>
+                <form method="GET" action="/tilasto">
+                    <select name="haettava" required="">
+                        <option th:each="aines: ${ainekset}" th:text="${aines.nimi}"></option>
+                    </select>
+                    <input type="submit" value="Hae"/>  
+                    <ol>
+                    <li th:each="smoothiet: ${smoothiet}">
+                        
+                    </li>
+                </ol>
+                </form>
+                <ol>
+                    <li th:each="smoothiet: ${smoothiet}">
+                        <span th:text="${smoothiet.id}"></span>
+                    </li>
+                </ol>-->
+
+
+            </article>
+            <footer><p>KEKS, 2018</p></footer>
+        </div>
     </body>
 </html>
