--- a/src/main/resources/templates/annos.html
+++ b/src/main/resources/templates/annos.html
@@ -37,10 +37,11 @@
             footer {
                 border-radius: 0px 0px 7px 7px;
                 padding: 1em;
-                color: white;
+                color: #000000;
                 background: linear-gradient(to right, #FF6574, #FFE0BC);
                 clear: left;
                 text-align: center;
+                font-family: "Helvetica", sans-serif;
             }
 
             /* navigaatiopalkki, sen sisältämä lista (ul) ja listan sisältämät linkit (ul a) 
@@ -143,6 +144,7 @@
 
 
             </article>
+            <footer><p>KEKS, 2018</p></footer>
         </div>
     </body>
 </html>
