--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -30,7 +30,7 @@
                 <h4>Kaikki raaka-aineet:</h4>
                 <ol>
                     <li th:each="aines: ${ainekset}">
-                        <a th:href="${'/tilasto/' + aines.id}"><span th:text="${aines.nimi}"></span></a>
+                        <a th:href="${'/tilasto/' + aines.id}"><span th:text="${aines.nimi}+ ' on ainesosana x smoothiessa.'"></span></a>                       
                     </li>
                 </ol>
 
