Yritin saada ainesosakohtaiselle tilastosivulle sen määrän, kuinka monessa soothiessa sitä käytetään, mutta rikoin sivun. pari muutakin muutosta

--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -122,8 +122,9 @@
             </nav>
 
             <article>
-                <p>Olet saapunut annoksen <span th:text="${aines.nimi}">aines</span> omalle sivulle. 
-                    Sivulla luettelo smoothieista, jotka sisältävät sitä.</p>
+                <p>Olet saapunut ainesosan <span th:text="${aines.nimi}">aines</span> omalle sivulle. 
+                    <span th:text="${aines.nimi}">aines</span> on ainesosana <span th:text="${suurin}"></span>
+                     smoothiessa. Sivulla luettelo smoothieista, jotka sisältävät sitä.</p>
 
                 <br/>
 
